css/master-template/common.less
/* ... */
#PH_BasketWidget .basketTotals .summaryLine {

    float: left;
    width: 100%;
}
#PH_BasketWidget .basketTotals .summaryLine span {

    float:left;
}

#PH_BasketWidget .basketTotals .summaryLine span.totalCost {
    float: right;
}









#PH_BasketWidget div.footer .button.proceed {
    margin-left: unset;
}

#PH_BasketWidget div.footer .proceed A {
    width: unset;
}



#PH_BasketWidget .basketEvent .infoSection .promoBox {

    display: none !important;
}

#PH_BasketWidget, #PH_BasketWidget.flipped {
    background: none;
}




.timer-tooltip.qtip {
    max-width: 290px;
    //display: inline-block !important;
}

/* Footer */

button#scrollTopControl {

    border               : none;
    border-radius        : 0px;
    -moz-border-radius   : 0px;
    -webkit-border-radius: 0px;
    padding-bottom       : 20px;
}

div#PH_Footer-main {

    padding : 5%;
    width   : 100%;
    position: relative;
    float   : left;

    a,
    button.btnLink {
        color          : #fff;
        text-decoration: none;
    }
}

.flm_CountDown .qtip-content {
    position: relative;
    top     : 2px;
    left    : 128px;
    overflow: visible;
}

.flm_CountDown .qtip-content {
    position: static;
    padding : 8px 0 0 4px !important;
}

#siteMenuBar #my_basket .basketQtyHolder,
#siteMenuBar[id='my basket'] .basketQtyHolder {
    background  : #000;
    //left      : -118px;
    color       : white;
    //position  : relative;

    @media @mobile {
        margin-top  : -3px;
        //left      : -4.5em !important;
        width       : 18px !important;
        left        : 59% !important;
    }
}

#siteMenuBar.hasclient #my_basket .basketQtyHolder,
#siteMenuBar[id='my basket'] .basketQtyHolder {
    @media @mobile {
        left: 59% !important;
    }
}

.qtip-content {
    overflow: visible !important;
}

.qtip.venueImageHint:before {
    content   : none;
    background: transparent;
    color     : transparent;
    display   : none;
}

.qtip.venueImageHint {
    display: none;
}

#PH_BasketWidget .basketItem {
    padding-right: 0;
    padding-left: 0;
}

.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {
    padding: 1% 4%;
}



.plzWait .ajax-refreshing::before {
    content: '\f1ce'
}

.plzWait {
    color: @button-color;
}

#media .video::after,
#media .video::before,
#media::after {
    content: none;
}

.flm_my_basket::after {
    content     : 'Basket' !important;
    width       : 60px;
    position    : static;
    line-height : 38px;
    padding-left: 10px;
    font-size   : 16px;
    font-weight : 600;
}

.template-TemplateFull #group_left,
.template-TemplateWithRight #group_left {
    float         : right;
    display       : flex;
    flex-direction: column;
    margin-right  : auto;
}

div#PH_Search_results {
    display    : flex;
    margin-left: auto;
    margin-top : 0;
}

.template-TemplateFull #group_left,
.template-TemplateWithRight #group_left {
    @media @desktop {
        margin-top: 30px;
    }
}

#group_Header {
    @media @desktop {
        margin    : 0 auto;
        width     : 100%;
        margin-top: 70px;
        text-align: center;
    }
}

#group_Header-fixed:not(.searchPageOpen) FORM.frmSearch INPUT[type=text] {
    @media @mobile {
        display: none;
    }
}









#PH_Memberships_list .itemsList, 
#PH_Gift_Vouchers_list .itemsList {

    display       : flex;
    flex-direction: row;
    flex-wrap: wrap;

    @media @mobile {

        flex-direction: column;
        padding: 15px;
    }
}

#PH_Memberships_list .itemsList .dataItem,
#PH_Gift_Vouchers_list .itemsList .dataItem {

    width           : 23%;
    margin          : 0 25px 25px 0 !important;
    padding         : 0 0 85px 0;
    border          : unset;
    background-color: @font-dark-color;
    height          : unset;
    position        : relative;

    @media @mobile {
        width: 100%;
    }
}

#PH_Memberships_list .itemsList .dataItem>*,
#PH_Gift_Vouchers_list .itemsList .dataItem>* {
    width  : 100%;
    padding: 6px 15px;
    min-height: unset;
    height: unset;
}


#PH_Membership_purchase .buttonsContainer,
#PH_Gift_Voucher_purchase .buttonsContainer,
#PH_Memberships_list .itemsList .itemsButtonsContainer,
#PH_Gift_Vouchers_list .itemsList .itemsButtonsContainer {

    .button.small_button_a a,
    button.small_button_a,
    .button.small_button_a a:hover,
    button.small_button_a:hover,
    .button.small_button_a a:focus,
    button.small_button_a:focus,
    .button.small_button_a a:active,
    button.small_button_a:active {

        .action-button();

        font-size: @button-desktop-fontsize;
        border   : 1px solid @button-color;
    }

}

#PH_Memberships_list .itemsList .itemsButtonsContainer .button.moreInfo a,
#PH_Gift_Vouchers_list .itemsList .itemsButtonsContainer .button.moreInfo a {

    display: none;
}


#PH_Memberships_list .itemsList .dataItem .item_image_container,
#PH_Gift_Vouchers_list .itemsList .dataItem .item_image_container {

    float        : left !important;
    width        : 100% !important;
    height       : auto !important;
    display      : block !important;
    padding      : 0 !important;
    /* min-height: 181px; */
}

#PH_Memberships_list .productData div.item_image {

    width       : 100% !important;
    margin-right: 20px !important;
    max-height  : unset !important;
    max-width   : unset !important;
}

#PH_Membership_purchase .productData div.item_image,
#PH_Memberships_list .itemsList .dataItem .item_image_container div.item_image,
#PH_Gift_Vouchers_list .itemsList .dataItem .item_image_container div.item_image {

    background : none !important;
    padding-top: unset !important;
    height     : unset !important;

}

#PH_Membership_purchase .productData div.item_image img,
.ph_gift_vouchers_list .itemsList .dataItem div.item_image img {
    margin       : unset;
    width        : 100%;
    height       : auto;
    border-radius: unset;
    max-width    : 100%;
    max-height   : unset;
}
/* ... */

